added all files

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Project Billboard</title>
+  <title>Song Popularity Predictor</title>
   <link rel="icon" href="./static/favicon.ico" />
 
   <!-- Bootstrap core CSS -->
@@ -37,7 +37,7 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead" style="background-image:url(https://i.imgur.com/7vDxj04.gif); background-size: cover; margin:0;">
+  <header class="masthead" style="background-image:url('./static/327839.jpg'); background-size: cover; margin:0;">
     <div class="container">
       <div class="intro-text">
         <div class="intro-heading text-uppercase">Song Popularity Predictor</div>
